--- a/hackme/.settings/org.eclipse.wst.common.component
+++ b/hackme/.settings/org.eclipse.wst.common.component
@@ -1,26 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-            
+                
     
-    <wb-module deploy-name="hackme">
-                        
+    
+    <wb-module deploy-name="Vulnerable">
+                                
+        
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                        
+                                
+        
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                        
+                                
+        
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                        
+                                
+        
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-                        
+                                
+        
         
         <property name="java-output-path" value="/hackme/target/classes"/>
-        <property name="context-root" value="hackme"/>
-                    
+        <property name="context-root" value="Vulnerable"/>
+                            
+    
     
     </wb-module>
-        
+            
+
 
 </project-modules>
